tests/typechecking/valid/1-arithmetic_operations/simple_substraction.ml
let x = 2 - 5 - 10 in ()