tests/typechecking/invalid/call_to_external_functions/call_to_float_function_with_bool.ml
let x = true in
  print_float(x)